--- a/styles/work.css
+++ b/styles/work.css
@@ -20,7 +20,7 @@
     padding: 25px 0;
 }
 .card-container {
-    background-color: var(--background-color2);
+    background-color: #284b63;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,7 +38,7 @@
     max-width: 400px;
     height: 250px;
     object-fit: cover;
-    border-bottom: 6px solid #fb8500;
+    border-bottom: 6px solid black;
 }
 .btn-container {
     width: 100%;
@@ -58,21 +58,21 @@
     
 }
 .btn-primary {
-    background-color: #fc6c0f;
+    background-color: grey;
 }
 .btn-primary a{
     color: white;
     font-weight: bold;
 }
 .btn-secundary {
-    border: 2px solid #fb8500;
+    border: 2px solid white;
 }
 .btn-secundary a {
     color: white;
     font-weight: bold;
 }
 .code {
-    color: #fb8500;
+    color: white;
 }
 .card-container:hover .code{
     color: red;
