--- a/styles/work.css
+++ b/styles/work.css
@@ -58,7 +58,7 @@
     
 }
 .btn-primary {
-    background-color: #ff6f00;
+    background-color: var(--background-color2);
 }
 .btn-primary a{
     color: #ffffff;
